updated KI emp raw

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                 <hr>
                 <div class="row valign">
                     <!-- <div class="col-md-1"></div> -->
-                    <div class="col-md-6">
+                    <div class="col-md-7">
                         <div class="top20tablesection">
                             <h4 class="nospaceunder"><strong><span id="top20gridtitle">&nbsp;</span><span
                                         class="filteredsimple">&nbsp;</span>Employers</strong> <span
@@ -90,7 +90,7 @@
                         </div>
                         <div id="top20grid"></div>
                     </div>
-                    <div class="col-md-1"></div>
+                    <!-- <div class="col-md-1"></div> -->
                     <div class="col-md-4 top20sharesection text-left">
                         <!-- <h4 class="nomarg incrsize">The <span class="highlightblue">Top 20</span><span class="filteredsimple">&nbsp;</span>employers account for</h4> -->
                         <span class="emphasize nomarg top20percent"></span><span class="percentstyle">%</span>
