format for webupload

--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,14 @@
                         <div id="top20grid"></div>
                     </div>
                     <div class="col-md-4 top20sharehide top20sharesection text-left">
-                        <span class="emphasize nomarg top20percent"></span><span class="percentstyle">%</span>
-                        <p class="top20shareline">For <span class="addthe"></span><span
-                                class="selectedgeography"></span>, the <strong>Top 20 </strong></p>
-                        <p class="top20text">For <span class="addthe"></span><span class="selectedgeography"></span>,
+                        <span class="emphasize nomarg top20percent">&nbsp;</span><span class="percentstyle">%</span>
+                        <p class="top20shareline">For <span class="addthe">&nbsp;</span><span
+                                class="selectedgeography">&nbsp;</span>, the <strong>Top 20 </strong></p>
+                        <p class="top20text">For <span class="addthe">&nbsp;</span><span
+                                class="selectedgeography">&nbsp;</span>,
                             the <strong>Top 20<span class="filteredsimple">&nbsp;</span>employers</strong> account for
-                            <span class="top20percent"></span>% of all jobs<span class="inindustry"></span> within <span
-                                class="addthe">&nbsp;</span><span class="selectedgeographyFDI">&nbsp;</span>.</p>
+                            <span class="top20percent"></span>% of all jobs<span class="inindustry">&nbsp;</span>within
+                            <span class="addthe">&nbsp;</span><span class="selectedgeographyFDI">&nbsp;</span>.</p>
                     </div>
                     <div class="col-md-1 top20sharehide"></div>
                     <div class="overhundredpct col-md-2"></div>
@@ -116,8 +117,7 @@
                                 class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <p>Industry classifications created by MAG, based on Census NAICS codes.</p>
-                    <p><span class="filteredKI">
-                            <!--&nbsp;--></span></p>
+                    <p><span class="filteredKI">&nbsp;</span></p>
                     <!-- <span class="filteredCluster">&nbsp;</span> -->
                     <p class="filternoteCluster"><em>Click on a bar to filter this page by an industry cluster.</em></p>
                     <button class="overviewreset">Clear <span class="overviewfiltertype">&nbsp;</span>Filter</button>
@@ -133,8 +133,7 @@
                                 class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <!-- <p class="nomarg"><span class="filteredKI">&nbsp;</span></p> -->
-                    <p><span class="filteredCluster">
-                            <!--&nbsp;--></span></p>
+                    <p><span class="filteredCluster">&nbsp;</span></p>
                     <p class="keyindtextpadding">Key Industries are a vital component of Arizona’s economy. These six
                         key
                         industries contribute to economic growth throughout the region. Output from key industries is
@@ -190,21 +189,20 @@
                         <h4 class="nospaceunder"><strong><span id="fdicharttitle">&nbsp;</span><a
                                     href="#testnotelink">*</a></strong> <span class="dlicon fdicountriesExcelExport"><i
                                     style="color:#2baab1;" class="fas fa-file-excel fa-1.5x"
-                                    title="Download data"></i></span></h4><em>by total
-                            jobs in <span class="addthe">&nbsp;</span><span
-                                class="selectedgeographyFDI">&nbsp;</span></em>
-                        <p><strong><span class="filteredcategoryFDI filtercolor"></span></strong></p>
+                                    title="Download data"></i></span></h4>
+                        <p class="nospaceunder"><strong><span
+                                    class="filteredcategoryFDI filtercolor">&nbsp;</span></strong></p><em>by total
+                            jobs</em>
                         <div id="fdiChart"></div>
                         <div id="fdichartgrid" style="display:none;"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
-                            <h4 class="nospaceunder"><strong>Top 10 Foreign-Owned <span
-                                        class="filteredsimplefdi filtercolor"></span> Employers</strong> <span
+                            <h4 class="nospaceunder"><strong>Top 10 Foreign-Owned<span
+                                        class="filteredsimplefdi filtercolor">&nbsp;</span>Employers</strong> <span
                                     class="dlicon fdiEmployersExcelExport"><i style="color:#2baab1;"
                                         class="fas fa-file-excel fa-1.5x" title="Download data"></i></span><br></h4>
-                            <p class="nomarg"><strong><span class="FDIcountry"></span>
-                                    <!--&nbsp;--></span></strong></p>
+                            <p class="nomarg"><strong><span class="FDIcountry">&nbsp;</span></strong></p>
                             <p class="nospaceabove"><em>by total
                                     jobs</em></p>
 
@@ -213,12 +211,11 @@
                             <div id="fdiGrid" style="display:none;"></div>
                         </div>
                         <div class="row">
-                            <h4 class="nospaceunder"><strong>Top 5 <span class="filteredsimplefdi filtercolor"></span>
-                                    Parent Companies</strong> <span class="dlicon fdiParentExcelExport"><i
-                                        style="color:#2baab1;" class="fas fa-file-excel fa-1.5x"
-                                        title="Download data"></i></span><br></h4>
-                            <p class="nomarg"><strong><span class="FDIcountry"></span>
-                                    <!--&nbsp;--></span></strong></p>
+                            <h4 class="nospaceunder"><strong>Top 5<span
+                                        class="filteredsimplefdi filtercolor">&nbsp;</span>Parent Companies</strong>
+                                <span class="dlicon fdiParentExcelExport"><i style="color:#2baab1;"
+                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span><br></h4>
+                            <p class="nomarg"><strong><span class="FDIcountry">&nbsp;</span></strong></p>
                             <p class="nospaceabove"><em>by total
                                     jobs</em></p>
                             <div style="margin-left: 5%; margin-right: 5%; font-size: 13px;" id="fdiparentGrid"></div>
@@ -232,8 +229,8 @@
                             class="dlicon fdiclusterExcelExport"><i style="color:#2baab1;"
                                 class="fas fa-file-excel fa-1.5x" title="Download data"></i></span></h4>
                     <p class="nospaceabove"><strong><span class="filteredcategoryFDI filtercolor">
-                                <!--&nbsp;--></span> <span class="FDIcountry">
-                                <!--&nbsp;--></span></strong></p>
+                                &nbsp;</span> <span class="FDIcountry">
+                                &nbsp;</span></strong></p>
                     <p>Industry classifications created by MAG, based on Census NAICS codes.</p>
 
                     <div id="clusterchartfdi"></div>
@@ -248,8 +245,8 @@
                                 class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
                     </h4>
                     <p class="nospaceabove"><strong><span class="filteredcategoryFDI filtercolor">
-                                <!--&nbsp;--></span> <span class="FDIcountry">
-                                <!--&nbsp;--></span></strong></p>
+                                &nbsp;</span> <span class="FDIcountry">
+                                &nbsp;</span></strong></p>
                     <p class="keyindtextpadding">Key Industries are a vital component of Arizona’s economy. These six
                         key
                         industries
@@ -266,7 +263,6 @@
             </div>
             <div class="section-wrapper">
                 <button class="text-left k-button" id="expand">Expand All Countries</button>
-                <!-- <span class="text-center"><small><em>Note: This table <u>does not</u> filter by geography.</em></small></span> -->
                 <button class="fdicollapse k-button" id="collapse">Collapse All (Reset Table)</button>
                 <!-- <h4 class="text-center"><strong>All FDI Employers for <span class="addthe">&nbsp;</span><span class="selectedgeographyFDI">&nbsp;</span></strong></h4> -->
                 <h2 class="text-center"><strong>All FDI Employers for the Phoenix MSA</strong></h2>
