update note link

--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
                     <div class="fdicountriesnumber">
                         <h2 class="nomarg1"><i style="color:#2baab1;" class="fas fa-globe fa-1.5x"></i>
                             <strong><span id="totalFDICountries">&nbsp;</span></strong></h2>
-                        <span class="totaltext">Parent Countries<a href="#testnotelink">*</a></span>
+                        <span class="totaltext">Parent Countries<a href="#note">*</a></span>
                     </div>
                     <div class="row text-center">
                         <div class="col-xs-2"></div>
@@ -187,7 +187,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h4 class="nospaceunder"><strong><span id="fdicharttitle">&nbsp;</span><a
-                                    href="#testnotelink">*</a></strong> <span class="dlicon fdicountriesExcelExport"><i
+                                    href="#note">*</a></strong> <span class="dlicon fdicountriesExcelExport"><i
                                     style="color:#2baab1;" class="fas fa-file-excel fa-1.5x"
                                     title="Download data"></i></span></h4>
                         <p class="nospaceunder"><strong><span
@@ -256,9 +256,9 @@
                     <div id="keyindgridfdi" style="display:none;"></div>
                     <hr>
                 </div>
-                <p class="text-center spaceabove"><small><a name="testnotelink"></a>* Note: "Parent Country" refers to
+                <p class="text-center spaceabove"><small><a name="note"></a>* Note: "Parent Country" refers to
                         the origin country of the
-                        foreign-owned employer's parent company.<br>Source: <span class="srcyr">&nbsp;</span> MAG
+                        foreign-owned employer's parent company.<br>Source: <span class="fdisrcyr">&nbsp;</span> MAG
                         Employer Database, all jobs 10+ rounded to nearest 10</small></p>
             </div>
             <div class="section-wrapper">
