excelExport all overview data

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,9 @@
             </ul>
 
             <div class="section-wrapper text-center">
-                <button class="topbutton overviewreset">Clear <span
+                <button class="overviewExcelExport exportall"><i style="color:#2baab1;"
+                        class="fas fa-file-excel fa-1.5x" title="Download data"></i> &nbsp;Download
+                    Data</button><button class="topbutton overviewreset">Clear <span
                         class="overviewfiltertype">&nbsp;</span>Filter</button>
                 <p><small>This page can be filtered by either industry cluster or key industry. Click on a bar chart
                         below to activate a filter.<br><em>Note: Only <u>one filter category</u> can be applied at a
@@ -85,8 +87,8 @@
                         <div class="top20tablesection">
                             <h4 class="nospaceunder"><strong><span id="top20gridtitle">&nbsp;</span><span
                                         class="filteredsimple">&nbsp;</span>Employers</strong>
-                                <span class="dlicon top20ExcelExport"><i style="color:#2baab1;"
-                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
+                                <!-- <span class="dlicon top20ExcelExport"><i style="color:#2baab1;"
+                                        class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
                             </h4>
                             <p class="nospaceabove"><em>by total jobs</em></p>
                         </div>
@@ -112,8 +114,8 @@
                 <hr>
                 <div class="clustersection">
                     <h4 class="nomarg"><strong>Industry Clusters</strong>
-                        <span class="dlicon clusterExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
+                        <!-- <span class="dlicon clusterExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
                     </h4>
                     <p>Industry classifications created by MAG, based on Census NAICS codes.</p>
                     <p><span class="filteredKI">&nbsp;</span></p>
@@ -128,8 +130,8 @@
                 </div>
                 <div class="keyindsection">
                     <h4 class="nomarg"><strong>Key Industries</strong>
-                        <span class="dlicon keyindExcelExport"><i style="color:#2baab1;"
-                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span>
+                        <!-- <span class="dlicon keyindExcelExport"><i style="color:#2baab1;"
+                                class="fas fa-file-excel fa-1.5x" title="Download data"></i></span> -->
                     </h4>
                     <!-- <p class="nomarg"><span class="filteredKI">&nbsp;</span></p> -->
                     <p><span class="filteredCluster">&nbsp;</span></p>
